# rfb-assessment

./: Cargo.toml  README.md  readme.md
src/: cli.rs  config.rs  error.rs  main.rs  rpc.rs  style.rs
src/commands/: address.rs  blockchain.rs  mod.rs  wallet.rs
